Add unit tests for AgentService, PostService, and UserService
- AgentServiceImplTest: 33 tests covering CRUD, stats, sync, heartbeat
- PostServiceImplTest: 27 tests covering CRUD, voting, feed operations
- UserServiceImplTest: 34 tests covering CRUD, auth, token operations

Fix Java 25 compatibility by upgrading byte-buddy to 1.15.10 and
configuring surefire plugin with experimental JVM flags.

Total: 94 tests, all passing.